changed  to  in notebook

--- a/mhw-3d-scalingTests-gadiJup.ipynb
+++ b/mhw-3d-scalingTests-gadiJup.ipynb
@@ -1440,7 +1440,7 @@
     "workdir = '/scratch/v45/jr5971/xmhw-question/'\n",
     "# sst_name = 'eac_surface.nc'\n",
     "sst_name = 'eac_surface.zarr'\n",
-    "temp_da = xr.open_dataarray(workdir + sst_name)\n",
+    "temp_da = xr.open_zarr(workdir + sst_name)\n",
     "temp_da"
    ]
   },
