"Added comments and a flox threshold calculation"

--- a/heatwaves_OFAM3_climatology.ipynb
+++ b/heatwaves_OFAM3_climatology.ipynb
@@ -60,19 +60,25 @@
     "import pandas as pd\n",
     "import xarray as xr\n",
     "import scipy as sci\n",
+    "import numpy_groupies as npg \n",
     "\n",
     "### plotting\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib import ticker\n",
-    "from matplotlib.gridspec import GridSpec\n",
-    "import matplotlib.colors as mcolors\n",
-    "import cartopy.crs as ccrs\n",
-    "import cartopy.feature as cfeature\n",
-    "import cmocean.cm as cmo\n",
-    "from cmocean.tools import lighten\n",
+    "#from matplotlib import ticker\n",
+    "#from matplotlib.gridspec import GridSpec\n",
+    "#import matplotlib.colors as mcolors\n",
+    "#import cartopy.crs as ccrs\n",
+    "#import cartopy.feature as cfeature\n",
+    "#import cmocean.cm as cmo\n",
+    "#from cmocean.tools import lighten\n",
+    "\n",
+    "### flox for GroupBy Reductions\n",
+    "from flox import Aggregation\n",
+    "from flox.aggregations import mean\n",
+    "import flox.xarray\n",
     "\n",
     "### marine heatwaves python package\n",
-    "from xmhw.xmhw import threshold, detect\n",
+    "#from xmhw.xmhw import threshold, detect\n",
     "\n",
     "# print versions of packages\n",
     "print(\"python version =\",sys.version[:5])\n",
@@ -81,12 +87,8 @@
     "print(\"xarray version =\", xr.__version__)\n",
     "print(\"scipy version =\", sci.__version__)\n",
     "print(\"matplotlib version =\", sys.modules[plt.__package__].__version__)\n",
-    "print(\"cmocean version =\", sys.modules[cmo.__package__].__version__)\n",
-    "print(\"cartopy version =\", sys.modules[ccrs.__package__].__version__)\n",
-    "\n",
-    "\n",
-    "wrkdir = \"/g/data/fp2/OFAM3\"\n",
-    "os.chdir(wrkdir)\n"
+    "#print(\"cmocean version =\", sys.modules[cmo.__package__].__version__)\n",
+    "#print(\"cartopy version =\", sys.modules[ccrs.__package__].__version__)"
    ]
   },
   {
@@ -897,10 +899,177 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbe173d9-7659-4013-b0da-3373ce468132",
+   "id": "14834715",
    "metadata": {},
    "source": [
-    "## grab the historical temperature data from fp2"
+    "### Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4afbc30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preprocesser to drop unwanted variables\n",
+    "def drop_stuff(ds, coords_to_drop,vars_to_drop):\n",
+    "    \"\"\"\n",
+    "    Preprocessor function to drop specified coordinates and variables from a dataset loaded via xr.open_mfdataset\n",
+    "\n",
+    "    Parameters:\n",
+    "        ds (xarray.Dataset): The dataset from which coordinates & variables are to be dropped.\n",
+    "        coords_to_drop (list of str): List of coordinate names to drop.\n",
+    "        vars_to_drop(list of str): List of variable names to drop\n",
+    "\n",
+    "    Returns:\n",
+    "        xarray.Dataset: Dataset with specified coordinates and variables dropped.\n",
+    "    \"\"\"\n",
+    "    # Drop coordinates if they are in the dataset\n",
+    "    ds = ds.drop_vars(coords_to_drop, errors='ignore')\n",
+    "    ds = ds.drop_vars(vars_to_drop, errors='ignore')\n",
+    "    return ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a12be785",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_chunks(data_array):\n",
+    "    ''' \n",
+    "    Print the chunk sizes for each dimension in an Xarray dataset\n",
+    "    \n",
+    "    Parameters: \n",
+    "    data_array (xarray.Daraset): The dataset from which to print chunks\n",
+    "    '''\n",
+    "    # Get chunk size\n",
+    "    chunks = data_array.chunks\n",
+    "    # Get dimension names\n",
+    "    dim_names = data_array.dims\n",
+    "    \n",
+    "    readable_chunks = {dim: chunks[i] for i, dim in enumerate(dim_names)}\n",
+    "    \n",
+    "    # Print chunk sizes for each dimension\n",
+    "    for dim, sizes in readable_chunks.items():\n",
+    "        print(f\"{dim} chunks: {sizes}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6460edc6",
+   "metadata": {},
+   "source": [
+    "### Creating Custom Aggragation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a52fec6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the custom grouped reduction function\n",
+    "def grouped_nanpercentile_90(group_idx, array, *, axis=-1, size=None, fill_value=None, dtype=None):\n",
+    "    \"\"\"\n",
+    "    Compute the 90th percentile for grouped data, skipping NaNs.\n",
+    "\n",
+    "    Parameters:\n",
+    "    group_idx (np.ndarray, 1D): Integer codes for group labels (1D).\n",
+    "    array (np.ndarray, nD): Values to reduce (nD).\n",
+    "    axis (int, optional): Axis of array along which to reduce. Requires array.shape[axis] == len(group_idx).\n",
+    "    size (int, optional): Expected number of groups. If None, output.shape[-1] == number of uniques in group_idx.\n",
+    "    fill_value (optional): Fill value for when the number of groups in group_idx is less than size.\n",
+    "    dtype (optional): Data type of output.\n",
+    "\n",
+    "    Returns:\n",
+    "    np.ndarray: An array with the 90th percentile value for each group, shape determined by `size`.\n",
+    "    \"\"\"\n",
+    "    return npg.aggregate_numpy.aggregate(\n",
+    "        group_idx,\n",
+    "        array,\n",
+    "        func=lambda x: np.nanpercentile(x, 90),\n",
+    "        axis=axis,\n",
+    "        size=size,\n",
+    "        fill_value=fill_value,\n",
+    "        dtype=dtype,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb367180",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the Aggregation\n",
+    "agg_nanpercentile_90 = Aggregation(\n",
+    "    name=\"nanpercentile_90\",\n",
+    "    numpy=grouped_nanpercentile_90,\n",
+    "    fill_value=np.nan,  \n",
+    "    chunk=None,  \n",
+    "    combine=None, \n",
+    ")\n",
+    "\n",
+    "agg_nanpercentile_90"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdf576d0",
+   "metadata": {},
+   "source": [
+    "## Load SST data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d4317982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieving historical temperature data from fp2\n",
+    "wrkdir = \"/g/data/fp2/OFAM3\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc75a896",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# Define coordinates and variables to drop\n",
+    "coords_to_drop =['st_edges_ocean','nv']\n",
+    "vars_to_drop =['Time_bounds','average_DT','average_T1','average_T2']\n",
+    "\n",
+    "# Load the datasets with preprocessing\n",
+    "big_sst = xr.open_mfdataset(\n",
+    "    [wrkdir, \"/jra55_historical.1/surface/ocean_temp_sfc_*.nc\"], \n",
+    "    parallel=True, \n",
+    "    preprocess = lambda x: drop_stuff(x, \n",
+    "                                         coords_to_drop, \n",
+    "                                         vars_to_drop)).squeeze() #combine='by_coords' is default\n",
+    "\n",
+    "# Rename Time to time\n",
+    "big_sst = big_sst.rename({'Time':'time'})\n",
+    "\n",
+    "big_sst"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1f2606b",
+   "metadata": {},
+   "source": [
+    "### Plot "
    ]
   },
   {
@@ -931,22 +1100,23 @@
     }
    ],
    "source": [
-    "sst = xr.open_mfdataset(\"./jra55_historical.1/surface/ocean_temp_sfc_*.nc\", combine='by_coords').squeeze()\n",
+    "# Variables defining the boundaries\n",
+    "x1, x2 = 1000, 1650\n",
+    "y1, y2 = 250, 700\n",
     "\n",
-    "x1 = 1000\n",
-    "x2 = 1650\n",
-    "y1 = 250\n",
-    "y2 = 700\n",
+    "# Variable to plot\n",
+    "temp = big_sst['temp']\n",
     "\n",
-    "\n",
+    "# Plotting\n",
     "plt.figure()\n",
-    "plt.pcolormesh(sst['temp'].isel(Time=0))\n",
-    "plt.plot((x1,x1),(y1,y2), 'r-')\n",
-    "plt.plot((x2,x2),(y1,y2), 'r-')\n",
-    "plt.plot((x1,x2),(y1,y1), 'r-')\n",
-    "plt.plot((x1,x2),(y2,y2), 'r-')\n",
+    "plt.pcolormesh(temp.isel(time=0))\n",
     "plt.colorbar()\n",
-    "\n"
+    "\n",
+    "# Plotting the boundaries\n",
+    "plt.plot([x1,x1],[y1,y2], 'r-')\n",
+    "plt.plot([x2,x2],[y1,y2], 'r-')\n",
+    "plt.plot([x1,x2],[y1,y1], 'r-')\n",
+    "plt.plot([x1,x2],[y2,y2], 'r-')"
    ]
   },
   {
@@ -954,7 +1124,7 @@
    "id": "d5512ff9-0900-4322-b8f6-439429acf0c0",
    "metadata": {},
    "source": [
-    "## subset the data to be only around the australian continent"
+    "## subset the data around the australian continent"
    ]
   },
   {
@@ -1521,9 +1691,10 @@
     }
    ],
    "source": [
-    "sst = sst.isel(yt_ocean=slice(y1,y2), xt_ocean=slice(x1,x2)).drop_vars('st_ocean')\n",
-    "sst = sst['temp'].rename({\"Time\":\"time\"}).compute()\n",
-    "sst\n"
+    "# Subset the dataset around the Australian continent\n",
+    "sst = big_sst.isel(yt_ocean=slice(y1,y2), \n",
+    "                            xt_ocean=slice(x1,x2)).drop_vars('st_ocean')\n",
+    "sst"
    ]
   },
   {
@@ -1541,7 +1712,37 @@
     }
    ],
    "source": [
-    "print(\"Historical SST dataset = %i Gb\"%(sst.nbytes/1e9))\n"
+    "print(\"Historical SST dataset = %i Gb\"%(big_sst.nbytes/1e9))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e0f73b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print size of reduced dataset\n",
+    "print(\"reduced historical SST dataset = %i Gb\"%(sst.nbytes/1e9))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c20c3ec6",
+   "metadata": {},
+   "source": [
+    "### Create DOY index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ab8f445",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sst['doy'] = sst['time'].dt.dayofyear\n",
+    "doy"
    ]
   },
   {
@@ -1559,6 +1760,147 @@
    "source": [
     "### calculate the climatology\n",
     "    which we will use later for calculating the marine heatwaves in a subsequent step"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4b6bec1",
+   "metadata": {},
+   "source": [
+    "### Identify SST chunks for full dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4cf1ae44",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'print_chunks' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Print chunk sizes for each dimension of temp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mprint_chunks\u001b[49m(temp)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'print_chunks' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Print chunk sizes for each dimension of temp\n",
+    "print_chunks(temp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1a4bd78",
+   "metadata": {},
+   "source": [
+    "## Implementing Flox for GroupBY Aggregations "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e3b47b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group the subset by DOY and take the mean using the cohort method, no chunking \n",
+    "climatology_cohorts = flox.xarray.xarray_reduce(\n",
+    "    sst,\n",
+    "    doy,\n",
+    "    func=\"mean\",\n",
+    "    method=\"cohorts\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf05fce5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the number of tasks in the Dask graph \n",
+    "num_tasks = len(climatology_cohorts.data.dask)\n",
+    "print(f\"Number of tasks for cohorts w/o chunking : {num_tasks}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cfb0d46",
+   "metadata": {},
+   "source": [
+    "#### 28 x 32GB workers - megamem queue - Wall time: 9min 47s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "766565ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# client = Client(threads_per_worker=1) ## 28 x 32GB workers - megamem queue\n",
+    "climatology_cohorts = climatology_cohorts.compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6069719a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(climatology_cohorts.nbytes/1e9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a9c3267",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# Group the subset by DOY and take the quantile using the blockwise method, no chunking \n",
+    "threshold_cohorts = flox.xarray.xarray_reduce(\n",
+    "    sst,\n",
+    "    doy,\n",
+    "    func=agg_nanpercentile_90, \n",
+    "    method=\"blockwise\", \n",
+    ")\n",
+    "\n",
+    "threshold_cohorts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2afbcc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the number of tasks in the Dask graph \n",
+    "num_tasks = len(threshold_cohorts.data.dask)\n",
+    "print(f\"Number of tasks for cohorts w/o chunking : {num_tasks}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cdc0e3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "#XXL-mem normal queue\n",
+    "threshold_cohorts = threshold_cohorts.compute()"
    ]
   },
   {
@@ -2165,11 +2507,11 @@
     }
    ],
    "source": [
-    "%%time\n",
+    "# %%time\n",
     "\n",
-    "sst['doy'] = sst['time'].dt.dayofyear\n",
-    "sst = sst.chunk({\"time\":-1, \"yt_ocean\":10, \"xt_ocean\":10})\n",
-    "sst\n"
+    "# sst['doy'] = sst['time'].dt.dayofyear\n",
+    "# sst = sst.chunk({\"time\":-1, \"yt_ocean\":10, \"xt_ocean\":10})\n",
+    "# sst\n"
    ]
   },
   {
@@ -2211,28 +2553,28 @@
     }
    ],
    "source": [
-    "%%time\n",
+    "# %%time\n",
     "\n",
-    "ii = 0\n",
-    "jj = 0\n",
-    "di = 50\n",
-    "dj = 50\n",
+    "# ii = 0\n",
+    "# jj = 0\n",
+    "# di = 50\n",
+    "# dj = 50\n",
     "\n",
-    "print(\"Calculating the climatology and threshold\")\n",
-    "seas_list = []\n",
-    "thresh_list = []\n",
-    "for ii in np.arange(0,len(sst.coords['xt_ocean']),di):\n",
-    "    print(ii)\n",
-    "    for jj in np.arange(0,len(sst.coords['yt_ocean']),dj):\n",
-    "        tmp = sst.isel(xt_ocean=slice(ii,ii+di), yt_ocean=slice(jj,jj+dj))\n",
-    "        seas_list.append(tmp.groupby('doy').mean(dim='time').compute())\n",
-    "        thresh_list.append(tmp.groupby('doy').quantile(0.9, dim='time', skipna=True).compute())\n",
+    "# print(\"Calculating the climatology and threshold\")\n",
+    "# seas_list = []\n",
+    "# thresh_list = []\n",
+    "# for ii in np.arange(0,len(sst.coords['xt_ocean']),di):\n",
+    "#     print(ii)\n",
+    "#     for jj in np.arange(0,len(sst.coords['yt_ocean']),dj):\n",
+    "#         tmp = sst.isel(xt_ocean=slice(ii,ii+di), yt_ocean=slice(jj,jj+dj))\n",
+    "#         seas_list.append(tmp.groupby('doy').mean(dim='time').compute())\n",
+    "#         thresh_list.append(tmp.groupby('doy').quantile(0.9, dim='time', skipna=True).compute())\n",
     "\n",
     "        \n",
-    "### merge the lists into single xarrays with the results\n",
-    "print(\"Merging results\")\n",
-    "seas_new = xr.merge(seas_list)\n",
-    "thresh_new = xr.merge(thresh_list)\n"
+    "# ### merge the lists into single xarrays with the results\n",
+    "# print(\"Merging results\")\n",
+    "# seas_new = xr.merge(seas_list)\n",
+    "# thresh_new = xr.merge(thresh_list)\n"
    ]
   },
   {
@@ -2250,12 +2592,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "climatology = seas_new.pad(doy=(31-1)//2, mode='wrap').rolling(doy=31, center=True).mean()\n",
-    "threshold90 = thresh_new.pad(doy=(31-1)//2, mode='wrap').rolling(doy=31, center=True).mean(skipna=True)\n",
+    "# Pad and apply rolling mean window of size 31 along DOY\n",
+    "climatology = climatology_cohorts.pad(doy=(31-1)//2, mode='wrap').rolling(doy=31, center=True).mean()\n",
+    "threshold90 = threshold_cohorts.pad(doy=(31-1)//2, mode='wrap').rolling(doy=31, center=True).mean(skipna=True)\n",
     "\n",
-    "climatology = climatology.chunk({'doy':-1, 'yt_ocean':50, 'xt_ocean':50}).isel(doy=slice(15,-15))\n",
-    "threshold90 = threshold90.chunk({'doy':-1, 'yt_ocean':50, 'xt_ocean':50}).isel(doy=slice(15,-15)).drop_vars('quantile')\n",
-    "\n"
+    "# Chunk the data and select a subset along DOY\n",
+    "climatology = climatology_cohorts.chunk({'doy':-1, 'yt_ocean':50, 'xt_ocean':50}).isel(doy=slice(15,-15))\n",
+    "threshold90 = threshold_cohorts.chunk({'doy':-1, 'yt_ocean':50, 'xt_ocean':50}).isel(doy=slice(15,-15)).drop_vars('quantile')"
    ]
   },
   {
@@ -2362,7 +2705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
